# semantic-seg-service

./: .gitignore  Dockerfile  Dockerfile-cuda  README.md  celery_app.py  docker-compose-cuda.yml  docker-compose.yml  main.py  paths.py  pyproject.toml  requirements.txt
app/: __init__.py  state.py
app/main_api/: inference.py
app/routes/: __init__.py  data.py  images.py  inference.py  models.py  segment.py  training.py
app/schemas/: augmentations.py  data_profile.py  hyperparams.py  preprocessing.py  segment.py  training.py  training_progress.py  training_request.py  training_run.py
app/util/: image_conversions.py  job_id_management.py
celery_tasks/: inference.py  training.py
inference/: core.py  inference.py
models/: __init__.py  model_info.py  model_loader.py  model_registry.py  register_models.py  unet.py
trained_model_infos/: LkyyDrGr.json
training/: core.py  dataloader.py  early_stopping.py  metrics.py  model_info.py  training.py
