[project]
name = "coral-back-ai-training"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "celery",
    "celery-types",
    "coral-schemas",
    "dotenv",
    "fastapi[standard]",
    "nanoid",
    "numpy",
    "opencv-python",
    "pycocotools",
    "pydantic",
    "python-dotenv",
    "redis",
    "segmentation-models-pytorch",
    "uvicorn",
]

[tool.uv.sources]
coral-schemas = { git = "https://github.com/yapat-app/coral-schemas.git" }
