[project]
name = "coral-back-ai-training"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "celery",
    "celery-types",
    "dotenv",
    "fastapi[standard]",
    "iquana-toolbox",
    "nanoid",
    "numpy",
    "opencv-python",
    "pycocotools",
    "pydantic",
    "python-dotenv",
    "redis",
    "segmentation-models-pytorch",
    "uvicorn",
]

[tool.uv.sources]
iquana-toolbox = { git = "https://github.com/Iquana-tool/iquana-toolbox.git" }
