[project]
name = "coral-back-ai-training"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "celery",
    "celery-types",
    "dotenv",
    "fastapi[standard]",
    "iquana-toolbox",
    "nanoid",
    "numpy",
    "opencv-python",
    "pycocotools",
    "pydantic",
    "python-dotenv",
    "redis",
    "segmentation-models-pytorch",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "uvicorn",
]

[tool.uv.sources]
iquana-toolbox = { git = "https://github.com/Iquana-tool/iquana-toolbox.git" }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
